# releasewatch

./: .env  .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  SEMANTIC_SEARCH_PLAN.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  run_bot.py
backend/alembic/: env.py
backend/alembic/versions/: 2f5d4b156c2e_.py  2f6a6c816018_convert_uuid_pks_to_integer.py  40ed5c82016a_add_release_fields.py  4df586727a4d_convert_reproduction_steps_to_json.py  6a40d3e32678_.py  70018d5c8380_.py  7f60b302c290_.py  985ffe397944_update_qa_to_active_releases.py  9a419680f8e8_.py  9b4f78e8f710_.py  9e11df4f3c48_.py  a0b1c2d3e4f5_add_semantic_search.py  a1b2c3d4e5f6_issue_number_sequence.py  aa11bb22cc33_per_comment_embeddings.py  b2c3d4e5f6a7_local_embedding_dim384.py  b66da6523f3e_drop_issue_reproduction_steps_table.py  b7c8d9e0f1a2_telegram_delivery_status_on_inbox.py  b849450048f2_.py  c1d2e3f4a5b6_event_system_phase1.py  cc11dd22ee33_add_deleted_at_to_releases.py  d3e4f5a6b7c8_add_meta_to_inbox_items.py  dd22ee33ff44_add_deleted_at_to_issues.py  e1f2a3b4c5d6_add_assignee_to_issue_cycles.py  ea199c990e64_.py  ee33ff44aa55_add_triage_lead_to_releases.py  f1a2b3c4d5e6_add_issue_cycles.py  f1g2h3i4j5k6_telegram_integrations_table.py  ff44aa55bb66_merge_heads.py
backend/app/: __init__.py  config.py  main.py
backend/scripts/: convert_uuid_to_int.py  create_admin.py  eval_search.py  seed.py  seed_persian.py  test_mention_inbox.py
frontend/: Dockerfile  (+6 more)
(+233 files in other folders)
